--- a/sprint.css
+++ b/sprint.css
@@ -1,8 +1,36 @@
 * {
     font-size: 20px;
     color: darkblue;
-    
+    margin-bottom: 10px;
     text-align: center;
+    font-weight: bold;
+    
+}
+.fondoVerde {
+    background-image: url("img/arreglo.png");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    min-height: 1000px;
+    padding-top: 200px;
+    
+
+}
+
+.nube {
+    margin-left: 20px;
+    height: 100px;
+    background-image: url('img/nube.png');
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
+    
+}
+
+#forecast {
+    padding-top: 30px; 
+    color: #c3950a ;
+    
 }
 
 #nextJoke {
@@ -15,6 +43,7 @@
 p {
     color: black;
     font-size: 16px;
+    outline-color: black;
 
 }
 
@@ -30,8 +59,23 @@ p {
 }
 
 .backgroundJoke {
-    background-image: url("img/background_jokes.svg") ;
+    
+    
+    
+}
+
+@media (max-width:660px) {
+    .nube {
+    margin: 0px;
+    height: 50px;
+    background-image: url('img/nube.png');
     background-position: center;
+    background-size: contain;
     background-repeat: no-repeat;
-    background-size: cover;
+}
+
+#forecast {
+    padding-top: 15px; 
+    color: #c3950a ;
+}
 }
