--- a/sprint.css
+++ b/sprint.css
@@ -6,16 +6,38 @@
     font-weight: bold;
     
 }
-.fondoVerde {
-    background-image: url("img/arreglo.png");
+.blob1 {
+    background-image: url("img/blob1.svg");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    min-height: 1000px;
-    padding-top: 200px;
-    
-
-}
+    padding-top: 10%;
+    min-height: 600px;
+  }
+  .blob2 {
+    background-image: url("img/blob2.svg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding-top: 10%;
+    min-height: 600px;
+  }
+  .blob3 {
+    background-image: url("img/blob3.svg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding-top: 10%;
+    min-height: 600px;
+  }
+  .blob4 {
+    background-image: url("img/blob4.svg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding-top: 10%;
+    min-height: 600px;
+  }
 
 .nube {
     margin-left: 20px;
@@ -26,9 +48,18 @@
     background-repeat: no-repeat;
     
 }
+.sol {
+    margin-left: 20px;
+    height: 100px;
+    background-image: url('img/sol.png');
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
+    
+}
 
 #forecast {
-    padding-top: 30px; 
+    padding-top: 80px; 
     color: #c3950a ;
     
 }
@@ -38,9 +69,7 @@
     height: 55px;
 }
 
-.lol1 {
-    left: 10%;
-}
+
 
 .lol2 {
     top: 15%;
@@ -96,15 +125,22 @@ p {
     background-size: contain;
     background-repeat: no-repeat;
 }
+ .sol {
+    margin: 0px;
+    height: 50px;
+    background-image: url('img/sol.png');
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+
 
 #forecast {
     padding-top: 15px; 
     color: #c3950a ;
 }
 
-.lol1 {
-    top: 25%;
-}
+
 
 .lol3 {
     top: -75%;
